--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">贵州省</span>: 毕节东收费站--G56杭瑞高速--S20毕威高速--S05毕节绕城高速--黔滇界<br><hr><span id="pro">云南省</span>:滇黔界--S79毕镇高速--S10镇毕高速--镇雄东收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">贵州省</span>: 金海湖北收费站--S05毕节绕城高速--S79毕镇高速--黔滇界<br><hr><span id="pro">云南省</span>:滇黔界--S79毕镇高速--S10镇毕高速--镇雄东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
