--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 开平农机市场--G325--开平大道--开平收费站--G15沈海高速--平连立交--G2518深岑高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G2518深岑高速--归义收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 鹤山市金洲铜材实业有限公司--G325--G228--官渡收费站--官渡互通立交--G15沈海高速--东坡岭立交--G75兰海高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G75兰海高速--新村枢纽--G59呼北高速--铁山港收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
