--- a/012.html
+++ b/012.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="ui-mobile"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><!--<base href="http://licwx.tpri.org.cn/zlwx/information.html?reqNo=A4400002019121800413&amp;status=52">--><base href=".">
-<title>全国大件运输许可查询系统</title>
+<title>许可信息</title>
 <meta name="author" content="www.tpri.com">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1,maximum-scale=1, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -52,17 +52,17 @@
             <h1 class="ui-title" role="heading" aria-level="1"></h1>
         </div>        
         
-         <div id="msg" style="position: fixed;width: 50%;height: 40px;top: 50%;left: 25%;margin-top: -15px;padding: 6px;z-index: 3;font-size: 30px;color: #ff6633;text-align: center;display: block;transform: rotate(20deg);display: none;border: 2px solid #ff6633;
+         <div id="msg" style="position: fixed;width: 50%;height: 40px;top: 50%;left: 25%;margin-top: -15px;padding: 6px;z-index: 3;font-size: 30px;color: #ff6633;text-align: center;display: block;transform: rotate(-20deg);display: none;border: 2px solid #ff6633;
     	font-family: monospace;">
                         当前有效           
         </div>
-        <div id="msg1" style="position: fixed; width: 50%; height: 40px; top: 50%; left: 25%; margin-top: -15px; padding: 6px; z-index: 3; font-size: 30px; color: rgb(255, 102, 51); text-align: center; transform: rotate(20deg); display: block; border: 2px solid rgb(255, 102, 51); font-family: monospace;">
+        <div id="msg1" style="position: fixed; width: 50%; height: 40px; top: 50%; left: 25%; margin-top: -15px; padding: 6px; z-index: 3; font-size: 30px; color: rgb(255, 102, 51); text-align: center; transform: rotate(-20deg); display: block; border: 2px solid rgb(255, 102, 51); font-family: monospace;">
                        当前有效           
         </div>
         <div role="main" class="ui-content">
             <ul data-role="listview" data-divider-theme="a" class="ui-listview">                
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
-                <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
+                <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002024011501363 【2类件】</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
