--- a/1.html
+++ b/1.html
@@ -40,10 +40,10 @@
 	<div class="mui-input-group">
 		<div class="small-title-class">基础信息</div>
 		<div class="mui-input-row " id="rowNo">	
-			<span class="title">许可证号：</span><span id="xkNo">A1500002024011642103【2类件】</span>
+			<span class="title">许可证号：</span><span id="xkNo">A1500002024011123456【2类件】</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">有效范围：</span><span id="pass_dist_name">内蒙,宁夏</span>
+			<span class="title">有效范围：</span><span id="pass_dist_name">广东,湖南</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行时间：</span><span id="pass_date">2024-01-17 15:04 至 2024-01-23 23:59</span>
